--- a/Welcome_to_Python3.7.ipynb
+++ b/Welcome_to_Python3.7.ipynb
@@ -1263,14 +1263,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Task A: Compute factorial(2), at 09:38:13 is i=2...\n",
-      "Task B: Compute factorial(3), at 09:38:13 is i=2...\n",
-      "Task C: Compute factorial(4), at 09:38:13 is i=2...\n",
+      "Task A: Compute factorial(2), at 02:40:50 is i=2...\n",
+      "Task B: Compute factorial(3), at 02:40:50 is i=2...\n",
+      "Task C: Compute factorial(4), at 02:40:50 is i=2...\n",
       "Task A: factorial(2) = 2\n",
-      "Task B: Compute factorial(3), at 09:38:15 is i=3...\n",
-      "Task C: Compute factorial(4), at 09:38:15 is i=3...\n",
+      "Task B: Compute factorial(3), at 02:40:52 is i=3...\n",
+      "Task C: Compute factorial(4), at 02:40:52 is i=3...\n",
       "Task B: factorial(3) = 6\n",
-      "Task C: Compute factorial(4), at 09:38:17 is i=4...\n",
+      "Task C: Compute factorial(4), at 02:40:54 is i=4...\n",
       "Task C: factorial(4) = 24\n",
       "[2, 6, 24]\n"
      ]
@@ -1427,6 +1427,131 @@
     "from contextlib import suppress\n",
     "with suppress(ZeroDivisionError):\n",
     "    1 / 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be641fa4",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Annoying `__init__`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "a9e1e147",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'John Smith - born on 2000-01-01, Student'"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from datetime import date\n",
+    "class Person:\n",
+    "    def __init__(self, first_name, last_name, birthday, occupation):\n",
+    "        self.first_name = first_name\n",
+    "        self.last_name = last_name\n",
+    "        self.birthday = birthday\n",
+    "        self.occupation = occupation\n",
+    "    \n",
+    "    @property\n",
+    "    def info(self):\n",
+    "        return f'{self.first_name} {self.last_name} - born on {self.birthday}, {self.occupation}'\n",
+    "\n",
+    "person = Person('John', 'Smith', date(2000, 1, 1), 'Student')\n",
+    "person.info"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fdda8754",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "**Each attribute specified 3 times!!!**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8eba5ef3",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "#### Enter dataclass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "f6aa9125",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'John Smith - born on 2000-01-01, Student'"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from dataclasses import dataclass\n",
+    "\n",
+    "@dataclass\n",
+    "class Person:\n",
+    "    first_name: str\n",
+    "    last_name: str\n",
+    "    birthday: date\n",
+    "    occupation: str\n",
+    "    \n",
+    "    @property\n",
+    "    def info(self):\n",
+    "        return f'{self.first_name} {self.last_name} - born on {self.birthday}, {self.occupation}'\n",
+    "\n",
+    "person = Person('John', 'Smith', date(2000, 1, 1), 'Student')\n",
+    "person.info"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff61e503",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "**Just specify type!!!**"
    ]
   }
  ],
